--- a/Week_01/TicTacToe.html
+++ b/Week_01/TicTacToe.html
@@ -127,6 +127,10 @@ function check(patten,color){
     return false;
 }
 
+function bestChoice(){
+    
+}
+
 show(pattent);
 </script>    
 </body>
